sumo/tests/od2trips/errors/o/testsuite.od2trips
# The begin time is larger than the end time (based import/or/100vehs_hour)
o_time_begin_larger

# begin time not numeric
o_time_begin_false

# end time not numeric
o_time_end_false

# one time is missing
o_time_one_missing


# factor not numeric
o_factor_false

# factor missing
o_factor_missing


# first amount not numeric
o_false

